gin-tuto update module 이름을 도메인을 포함하며 docs 폴더를 지정하면 정상적으로 작동동
